fixed the bug on Safari

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -177,6 +177,8 @@ button:focus {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 
